courses/430_programming-languages/assignment-6/tests/error/hw5_eval16.nex
  fun fact(n : int) : int
  {
    if (n <= 0)
    {
	return 1;
    }
    else {
        return n * fact(n - 1);
    }
  }
  print (fact(5));
   print (":n");
